--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -131,7 +131,7 @@
 								<div class="col-lg-4 position-relative custom-sm-margin-bottom-1">
 									<img src="img/demos/resume/about-me/me2.jpg" class="img-fluid custom-border custom-image-position-2 custom-box-shadow-4" alt />
 								</div>
-								<div class="col-lg-6 col-xl-5">
+								<div class="col-lg-8">
 									<h1 class="text-color-primary custom-font-size-1">Michelle Wang</h1>
 									<p class="text-color-light font-weight-normal custom-font-size-2 custom-margin-bottom-1">Software Engineer</p>
 									<span class="custom-about-me-infos">
@@ -139,12 +139,10 @@
 										<span class="custom-text-color-1 text-uppercase mb-3">
 											<strong class="text-color-light">Previous: </strong>
 											Data Analyst at First Republic Bank
-											<a data-hash href="#experience" class="btn btn-tertiary text-uppercase custom-btn-style-1 text-1 ms-2">View More</a>
 										</span>
 										<span class="custom-text-color-1 text-uppercase mb-3">
 											<strong class="text-color-light">Education: </strong>
 											Columbia University
-											<a data-hash href="#education" class="btn btn-tertiary text-uppercase custom-btn-style-1 text-1 ms-2">View More</a>
 										</span>
 										<span class="custom-text-color-1 text-uppercase">
 											<strong class="text-color-light">Email: </strong>
@@ -159,9 +157,6 @@
 											www.linkedin.com/in/michelleyiwang
 										</span>
 									</span>
-								</div>
-								<div class="col-lg-2 col-xl-3 d-none d-lg-block">
-									<img src="img/demos/resume/about-me/mouse.png" custom-anim class="img-fluid custom-image-pos-1" alt />
 								</div>
 							</div>
 						</div>
@@ -220,42 +215,26 @@
 							<div class="row">
 								<div class="col">
 
-									<div class="custom-box-details bg-color-light custom-box-shadow-1 col-lg-6 ms-5 mb-5 mb-lg-4 float-end clearfix">
+									<div class="custom-box-details bg-color-light custom-box-shadow-1 col-lg-6 ms-5 mb-5 mb-lg-4 float-end clearfix" style="min-height: 270px; display: flex; flex-direction: column; justify-content: center;">
 										<h4>Personal Details</h4>
-										<div class="row">
-											<div class="col-md-6">
-												<ul class="custom-list-style-1 p-0 mb-0">
-													<li>
-														<span class="text-color-dark">Location:</span>
-														<span class="custom-text-color-2">Mountain View, CA</span>
-													</li>
-													<li>
-														<span class="text-color-dark">Email:</span>
-														<span class="custom-text-color-2"><a class="custom-text-color-2" href="mailto:wang.michelle.yi@gmail.com">wang.michelle.yi@gmail.com</a></span>
-													</li>
-													<li>
-														<span class="text-color-dark">Phone:</span>
-														<span class="custom-text-color-2"><a class="custom-text-color-2" href="tel:9178478851">917-847-8851</a></span>
-													</li>
-												</ul>
-											</div>
-											<div class="col-md-6">
-												<ul class="custom-list-style-1 p-0 mb-0">
-													<li>
-														<span class="text-color-dark">LinkedIn:</span>
-														<span class="custom-text-color-2"><a class="custom-text-color-2" href="https://www.linkedin.com/in/michelleyiwang">linkedin.com/in/michelleyiwang</a></span>
-													</li>
-													<li>
-														<span class="text-color-dark">Experience:</span>
-														<span class="custom-text-color-2">7+ Years</span>
-													</li>
-													<li>
-														<span class="text-color-dark">Focus:</span>
-														<span class="custom-text-color-2">Full-Stack Development</span>
-													</li>
-												</ul>
-											</div>
-										</div>
+										<ul class="custom-list-style-1 p-0 mb-0">
+											<li>
+												<span class="text-color-dark">Focus:</span>
+												<span class="custom-text-color-2">Full-Stack Development</span>
+											</li>
+											<li>
+												<span class="text-color-dark">Work Experience:</span>
+												<span class="custom-text-color-2">7+ Years</span>
+											</li>
+											<li>
+												<span class="text-color-dark">Location:</span>
+												<span class="custom-text-color-2">Mountain View, CA</span>
+											</li>
+											<li>
+												<span class="text-color-dark">Visa Status:</span>
+												<span class="custom-text-color-2">Green Card Holder</span>
+											</li>
+										</ul>
 									</div>
 
 									<h2 class="text-color-dark font-weight-extra-bold text-uppercase">About Me</h2>
@@ -269,8 +248,6 @@
 
 										<p>Morbi tincidunt nunc non diam porta, at fermentum orci bibendum. Donec arcu nisi, ornare nec commodo vitae, sollicitudin sed magna. Cras sit amet justo et nulla pulvinar laoreet. Phasellus scelerisque, metus id posuere vulputate, diam tellus iaculis sapien, eget scelerisque ipsum libero convallis velit. Duis lorem ligula, faucibus quis tellus nec, fringilla ultricies leo. Etiam tempus congue magna. Suspendisse porta dictum tortor, eu volutpat ipsum eleifend nec. Aliquam dapibus lorem luctus, cursus libero imperdiet, mattis nunc. Sed in ipsum diam. Quisque efficitur metus purus, vitae fermentum lacus venenatis id.</p>
 									</div>
-
-									<a id="aboutMeMoreBtn" class="btn btn-tertiary text-uppercase custom-btn-style-1 text-1" href="#">View More</a>
 
 								</div>
 							</div>
@@ -306,11 +283,11 @@
 													<h4 class="text-color-dark font-weight-semibold">Data Analyst, Data Analytics and Automation</h4>
 													<p class="custom-text-color-2">Engineered data tools and infrastructure to support Internal Audit's analytics strategy and automation.</p>
 													<ul class="custom-list-style-1 p-0 mb-0">
-														<li>Agile Development: Collaborated in Agile sprints with auditors and engineers to design and deliver internal audit analytics tools and automation pipelines.</li>
-														<li>ETL & Pipeline Engineering: Built scalable ETL workflows and reusable data pipelines in Python and Snowflake, improving data accessibility and reliability.</li>
-														<li>Data Visualization: Developed interactive Tableau dashboards to track collateral valuations and identify compliance gaps across thousands of real estate loans.</li>
-														<li>Code Optimization: Refactored legacy scripts and standardized 1M+ records across 500+ fields to enhance maintainability and accelerate analysis.</li>
-														<li>End-to-End Delivery: Contributed to full lifecycle of internal tools, from requirements gathering to testing and deployment, in a fast-paced environment.</li>
+														<li><strong>Agile Development:</strong> Collaborated in Agile sprints with auditors and engineers to design and deliver internal audit analytics tools and automation pipelines.</li>
+														<li><strong>ETL & Pipeline Engineering:</strong> Built scalable ETL workflows and reusable data pipelines in Python and Snowflake, improving data accessibility and reliability.</li>
+														<li><strong>Data Visualization:</strong> Developed interactive Tableau dashboards to track collateral valuations and identify compliance gaps across thousands of real estate loans.</li>
+														<li><strong>Code Optimization:</strong> Refactored legacy scripts and standardized 1M+ records across 500+ fields to enhance maintainability and accelerate analysis.</li>
+														<li><strong>End-to-End Delivery:</strong> Contributed to full lifecycle of internal tools, from requirements gathering to testing and deployment, in a fast-paced environment.</li>
 													</ul>
 												</div>
 											</div>
@@ -336,11 +313,11 @@
 													<h4 class="text-color-dark font-weight-semibold">Data Scientist, Product</h4>
 													<p class="custom-text-color-2">Led full-stack development of blockchain products for digital asset trading, aligned with user requirements.</p>
 													<ul class="custom-list-style-1 p-0 mb-0">
-														<li>Scrum Execution: Collaborated with tech team in a Scrum environment to design and deliver smart contract-based solutions for tokenizing metal commodities.</li>
-														<li>Product Specs: Authored detailed PRDs and aligned feature development with customer needs and business goals.</li>
-														<li>Web Development: Built and launched the company's public website, integrating Google Analytics to track user behavior and optimize engagement; increased traffic by 15% and reduced bounce rate by 20%.</li>
-														<li>Project Management: Managed product delivery using Jira, improving development velocity and quality through sprint planning and continuous integration.</li>
-														<li>Platform Testing: Led benchmarking and testing with IBM Blockchain, identifying performance bottlenecks and driving UI/UX improvements based on user research.</li>
+														<li><strong>Scrum Execution:</strong> Collaborated with tech team in a Scrum environment to design and deliver smart contract-based solutions for tokenizing metal commodities.</li>
+														<li><strong>Product Specs:</strong> Authored detailed PRDs and aligned feature development with customer needs and business goals.</li>
+														<li><strong>Web Development:</strong> Built and launched the company's public website, integrating Google Analytics to track user behavior and optimize engagement; increased traffic by 15% and reduced bounce rate by 20%.</li>
+														<li><strong>Project Management:</strong> Managed product delivery using Jira, improving development velocity and quality through sprint planning and continuous integration.</li>
+														<li><strong>Platform Testing:</strong> Led benchmarking and testing with IBM Blockchain, identifying performance bottlenecks and driving UI/UX improvements based on user research.</li>
 													</ul>
 												</div>
 											</div>
@@ -366,9 +343,9 @@
 													<h4 class="text-color-dark font-weight-semibold">Senior Manager</h4>
 													<p class="custom-text-color-2">Integrated statistical analysis of operational and financial data to provide investment consulting services.</p>
 													<ul class="custom-list-style-1 p-0 mb-0">
-														<li>Financial Modeling: Assisted in the development of annual business plans targeting healthcare industry by appraising 200+ investment projects using IRR and ERV models; signed off all validated projects and allocated on average $370 million in annual loans.</li>
-														<li>Business Intelligence: Conducted metadata analysis of existing banking data and performed data categorization; incorporated automation into data capture and transformed data reporting system to incorporate metrics and KPIs.</li>
-														<li>Dashboard Design: Built dashboards to analyze the competitive landscape and the impact of business plans; translated data into intelligence reports for executives.</li>
+														<li><strong>Financial Modeling:</strong> Assisted in the development of annual business plans targeting healthcare industry by appraising 200+ investment projects using IRR and ERV models; signed off all validated projects and allocated on average $370 million in annual loans.</li>
+														<li><strong>Business Intelligence:</strong> Conducted metadata analysis of existing banking data and performed data categorization; incorporated automation into data capture and transformed data reporting system to incorporate metrics and KPIs.</li>
+														<li><strong>Dashboard Design:</strong> Built dashboards to analyze the competitive landscape and the impact of business plans; translated data into intelligence reports for executives.</li>
 													</ul>
 												</div>
 											</div>
