--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -392,7 +392,7 @@
 				<section id="skills" class="section section-no-border bg-color-light m-0">
 					<div class="container">
 						<div class="row align-items-center">
-							<div class="col-md-6 col-lg-8 mb-4 mb-md-0">
+							<div class="col-12">
 								<div class="row">
 									<div class="col-lg-6">
 										<h2 class="text-color-dark text-uppercase font-weight-extra-bold">Technical Skills</h2>
@@ -453,29 +453,6 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-6 col-lg-4">
-								<div class="row">
-									<div class="col">
-										<div class="custom-box-details bg-color-light custom-box-shadow-1">
-											<h4 class="text-color-dark">Expertise</h4>
-											<ul class="custom-list-style-1 p-0">
-												<li>
-													<span class="font-weight-semibold custom-max-width-1 text-color-dark">Languages:</span>
-													<span class="custom-text-color-2">Java, JavaScript, React, Node.js, jQuery, HTML, CSS, R, Python</span>
-												</li>
-												<li>
-													<span class="font-weight-semibold custom-max-width-1 text-color-dark">Frameworks:</span>
-													<span class="custom-text-color-2">AWS, GCP, Spring Boot, SQL/NoSQL, LangChain, Docker</span>
-												</li>
-												<li>
-													<span class="font-weight-semibold custom-max-width-1 text-color-dark">Expertise:</span>
-													<span class="custom-text-color-2">RESTful API, Web Apps, Distributed Computing, CI/CD, Big Data ETL</span>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
 						</div>
 					</div>
 				</section>
@@ -506,8 +483,7 @@
 											<p class="custom-text-color-2 mb-1"><a href="https://mcrawjf52p.us-east-2.awsapprunner.com/" target="_blank">https://mcrawjf52p.us-east-2.awsapprunner.com/</a></p>
 											<p class="custom-text-color-2">A personalized Twitch resources recommendation engine</p>
 											<ul class="custom-list-style-1 p-0 mb-0">
-												<li>Built a full-stack Spring Boot application for users to search Twitch streams, videos, and clips and receive personalized recommendations based on their favorites.</li>
-												<li>Designed a web page with user-friendly UX using React and Ant Design; Stored game data in MySQL database hosted on AWS RDS; Conducted CRUD operations with Spring Data JDBC.</li>
+												<li>Built a web page with user-friendly UX using React and Ant Design; Stored game data in MySQL database hosted on AWS RDS; Conducted CRUD operations with Spring Data JDBC.</li>
 												<li>Integrated the Twitch API using OpenFeign to fetch real-time Twitch content and built RESTful APIs for frontend-backend communication.</li>
 												<li>Implemented Spring Security for user authentication and developed a content-based recommendation system using users' favorite collections.</li>
 												<li>Optimized performance with Spring Caching + Caffeine and ensured reliability through unit testing.</li>
