Update About Me

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -135,26 +135,22 @@
 									<h1 class="text-color-primary custom-font-size-1">Michelle Wang</h1>
 									<p class="text-color-light font-weight-normal custom-font-size-2 custom-margin-bottom-1">Software Engineer</p>
 									<span class="custom-about-me-infos">
-										<span class="custom-text-color-1 text-uppercase">Mountain View, CA 94043</span>
 										<span class="custom-text-color-1 text-uppercase mb-3">
-											<strong class="text-color-light">Previous: </strong>
-											Data Analyst at First Republic Bank
+											<strong>Previous:</strong> Data Analyst at First Republic Bank
+											<a data-hash href="#experience" class="btn btn-tertiary text-uppercase custom-btn-style-1 text-1 ms-2">View More</a>
 										</span>
 										<span class="custom-text-color-1 text-uppercase mb-3">
-											<strong class="text-color-light">Education: </strong>
-											Columbia University
+											<strong>Education:</strong> Columbia University
+											<a data-hash href="#education" class="btn btn-tertiary text-uppercase custom-btn-style-1 text-1 ms-2">View More</a>
+										</span>
+										<span class="custom-text-color-1 text-uppercase mb-3">
+											<strong>Email:</strong> wang.michelle.yi@gmail.com
+										</span>
+										<span class="custom-text-color-1 text-uppercase mb-3">
+											<strong>Phone:</strong> 917-847-8851
 										</span>
 										<span class="custom-text-color-1 text-uppercase">
-											<strong class="text-color-light">Email: </strong>
-											wang.michelle.yi@gmail.com
-										</span>
-										<span class="custom-text-color-1 text-uppercase">
-											<strong class="text-color-light">Phone: </strong>
-											917-847-8851
-										</span>
-										<span class="custom-text-color-1 text-uppercase">
-											<strong class="text-color-light">LinkedIn: </strong>
-											www.linkedin.com/in/michelleyiwang
+											<strong>LinkedIn:</strong> www.linkedin.com/in/michelleyiwang
 										</span>
 									</span>
 								</div>
@@ -199,10 +195,10 @@
 									</a>
 								</div>
 								<div class="col-lg-3 text-center p-0">
-									<a href="#" class="text-decoration-none">
+									<a href="files/Michelle_Wang_Resume.pdf" download class="text-decoration-none">
 										<span class="custom-nav-button text-color-dark">
 											<i class="icon-cloud-download icons text-color-primary"></i>
-											Download Resume	
+											Download Resume
 										</span>
 									</a>
 								</div>
@@ -213,32 +209,8 @@
 					<section class="section section-no-border bg-color-light m-0">
 						<div class="container">
 							<div class="row">
-								<div class="col">
-
-									<div class="custom-box-details bg-color-light custom-box-shadow-1 col-lg-6 ms-5 mb-5 mb-lg-4 float-end clearfix" style="min-height: 270px; display: flex; flex-direction: column; justify-content: center;">
-										<h4>Personal Details</h4>
-										<ul class="custom-list-style-1 p-0 mb-0">
-											<li>
-												<span class="text-color-dark">Focus:</span>
-												<span class="custom-text-color-2">Full-Stack Development</span>
-											</li>
-											<li>
-												<span class="text-color-dark">Work Experience:</span>
-												<span class="custom-text-color-2">7+ Years</span>
-											</li>
-											<li>
-												<span class="text-color-dark">Location:</span>
-												<span class="custom-text-color-2">Mountain View, CA</span>
-											</li>
-											<li>
-												<span class="text-color-dark">Visa Status:</span>
-												<span class="custom-text-color-2">Green Card Holder</span>
-											</li>
-										</ul>
-									</div>
-
+								<div class="col-lg-8">
 									<h2 class="text-color-dark font-weight-extra-bold text-uppercase">About Me</h2>
-
 									<p>Data expert with 7 years of industry experience in building big data analytics pipelines and leading high-impact, consumer facing projects. Actively seeking a full-stack software engineering role to apply deep expertise in web development, machine learning, and data processing. Solid foundation in computer science and data structures, with strong proficiency in Java, JavaScript, React, Python, SQL, and HTML/CSS. Fast learner with hands-on experience in cloud platforms (GCP, AWS) and emerging AI tools like Cursor AI. Passionate about building scalable applications from the ground up.</p>
 
 									<div class="about-me-more" id="aboutMeMore">
@@ -248,7 +220,29 @@
 
 										<p>Morbi tincidunt nunc non diam porta, at fermentum orci bibendum. Donec arcu nisi, ornare nec commodo vitae, sollicitudin sed magna. Cras sit amet justo et nulla pulvinar laoreet. Phasellus scelerisque, metus id posuere vulputate, diam tellus iaculis sapien, eget scelerisque ipsum libero convallis velit. Duis lorem ligula, faucibus quis tellus nec, fringilla ultricies leo. Etiam tempus congue magna. Suspendisse porta dictum tortor, eu volutpat ipsum eleifend nec. Aliquam dapibus lorem luctus, cursus libero imperdiet, mattis nunc. Sed in ipsum diam. Quisque efficitur metus purus, vitae fermentum lacus venenatis id.</p>
 									</div>
-
+								</div>
+								<div class="col-lg-4">
+									<div class="custom-box-details bg-color-light custom-box-shadow-1 mb-5 mb-lg-4 float-end clearfix" style="min-height: 270px; display: flex; flex-direction: column; justify-content: center;">
+										<h4 class="text-color-dark" style="font-weight: bold;">Personal Details</h4>
+										<ul class="custom-list-style-1 p-0 mb-0" style="width: 100%;">
+											<li style="display: flex; justify-content: space-between; align-items: center;">
+												<span class="text-color-dark" style="font-weight: bold;">Focus:</span>
+												<span class="custom-text-color-2">Full-Stack Development</span>
+											</li>
+											<li style="display: flex; justify-content: space-between; align-items: center;">
+												<span class="text-color-dark" style="font-weight: bold;">Experience:</span>
+												<span class="custom-text-color-2">7+ Years</span>
+											</li>
+											<li style="display: flex; justify-content: space-between; align-items: center;">
+												<span class="text-color-dark" style="font-weight: bold;">Location:</span>
+												<span class="custom-text-color-2">Mountain View, CA</span>
+											</li>
+											<li style="display: flex; justify-content: space-between; align-items: center;">
+												<span class="text-color-dark" style="font-weight: bold;">Visa Status:</span>
+												<span class="custom-text-color-2">Green Card Holder</span>
+											</li>
+										</ul>
+									</div>
 								</div>
 							</div>
 						</div>
