Update Send Message

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -708,7 +708,7 @@
 							</section>
 						</div>
 						<div class="col-lg-6 p-0">
-							<section class="section section-no-border h-100 m-0" style="background: url(img/demos/resume/contact/contact-bg-1.jpg); background-size: cover;">
+							<section class="section section-no-border h-100 m-0" style="background: #0091d2;">
 								<div class="row m-0">
 									<div class="col-half-section col-half-section-left ms-3">
 										<h2 class="text-color-light text-uppercase font-weight-extra-bold">Send Message</h2>
