Update Send Message

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -579,7 +579,10 @@
 
 											<div class="form-content">
 												<div class="form-control-custom form-control-custom-light">
-													<input type="text" class="form-control" name="name" placeholder="Your Name *" data-msg-required="This field is required." id="name" required="" />
+													<input type="text" class="form-control" name="name" placeholder="Your Name *" data-msg-required="This field is required." id="name" required />
+												</div>
+												<div class="form-control-custom form-control-custom-light">
+													<input type="email" class="form-control" name="email" placeholder="Your Email *" data-msg-required="This field is required." id="email" required />
 												</div>
 												<div class="form-control-custom form-control-custom-light">
 													<input type="text" class="form-control" name="subject" placeholder="Subject *" data-msg-required="This field is required." id="subject" required="" />
