Animation to Education

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -350,7 +350,7 @@
 								<h2 class="text-color-quaternary text-uppercase font-weight-extra-bold m-0">Education</h2>
 								<div class="owl-carousel nav-bottom custom-dots-style-1 custom-dots-color-1 custom-dots-color-1-dark mb-0" data-plugin-options="{'items': 1, 'loop': false, 'dots': true, 'nav': false}">
 									<div class="row">
-										<div class="col-lg-6 col-sm-6 pb-4">
+										<div class="col-lg-6 col-sm-6 pb-4" data-aos="fade-up" data-aos-delay="0">
 											<div class="custom-box-details-2 bg-color-light custom-box-shadow-3">
 												<i class="icon-graduation icons text-color-primary"></i>
 												<h4 class="font-weight-semibold text-color-dark m-0">Columbia University</h4>
@@ -359,7 +359,7 @@
 												<strong class="text-color-primary">Aug 2018 - Dec 2019</strong>
 											</div>
 										</div>
-										<div class="col-lg-6 col-sm-6 pb-4">
+										<div class="col-lg-6 col-sm-6 pb-4" data-aos="fade-up" data-aos-delay="100">
 											<div class="custom-box-details-2 bg-color-light custom-box-shadow-3">
 												<i class="icon-graduation icons text-color-primary"></i>
 												<h4 class="font-weight-semibold text-color-dark m-0">University of Southern California</h4>
