--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -374,65 +374,288 @@
 					</div>
 				</section>
 
-				<section id="skills" class="section section-no-border bg-color-light m-0">
+				<section id="technical-skills" class="section section-no-border bg-color-light m-0">
 					<div class="container">
-						<div class="row align-items-center">
-							<div class="col-12">
+						<div class="row">
+							<div class="col">
+								<h2 class="text-color-dark text-uppercase font-weight-extra-bold mb-4">Technical Skills</h2>
 								<div class="row">
-									<div class="col-lg-6">
-										<h2 class="text-color-dark text-uppercase font-weight-extra-bold">Technical Skills</h2>
-										<div class="progress-bars custom-progress-bars">
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>Languages</span>
-											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="95%"></div>
-											</div>
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>Frameworks</span>
-											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="90%" data-appear-animation-delay="300"></div>
-											</div>
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>Cloud Platforms</span>
-											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="85%" data-appear-animation-delay="600"></div>
-											</div>
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>Databases</span>
-											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="90%" data-appear-animation-delay="900"></div>
+									<!-- Programming Languages -->
+									<div class="col-lg-6 mb-4">
+										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
+											<h4 class="text-color-dark mb-3">
+												<i class="fas fa-code text-color-primary me-2"></i>
+												Programming Languages
+											</h4>
+											<div class="row">
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Java</span>
+															<span class="text-color-primary">95%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="95%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">C++</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Python</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+												</div>
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Go</span>
+															<span class="text-color-primary">80%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="80%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">JavaScript</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">PHP</span>
+															<span class="text-color-primary">75%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="75%"></div>
+														</div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
-									<div class="col-lg-6">
-										<div class="progress-bars custom-progress-bars custom-md-margin-top-1">
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>Web Development</span>
+
+									<!-- Cloud & Big Data -->
+									<div class="col-lg-6 mb-4">
+										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
+											<h4 class="text-color-dark mb-3">
+												<i class="fas fa-cloud text-color-primary me-2"></i>
+												Cloud & Big Data
+											</h4>
+											<div class="row">
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">GCP</span>
+															<span class="text-color-primary">95%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="95%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">AWS</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Apache Kafka</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+												</div>
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Hadoop</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Spark</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">MapReduce</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+												</div>
 											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="95%"></div>
+										</div>
+									</div>
+
+									<!-- Web & Mobile Development -->
+									<div class="col-lg-6 mb-4">
+										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
+											<h4 class="text-color-dark mb-3">
+												<i class="fas fa-mobile-alt text-color-primary me-2"></i>
+												Web & Mobile Development
+											</h4>
+											<div class="row">
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">ReactJS</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">iOS (Swift)</span>
+															<span class="text-color-primary">80%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="80%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">HTML/CSS</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+												</div>
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">REST API</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Java Spring</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Microservices</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+												</div>
 											</div>
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>Data Analytics</span>
-											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="90%" data-appear-animation-delay="300"></div>
-											</div>
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>Machine Learning</span>
-											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="85%" data-appear-animation-delay="600"></div>
-											</div>
-											<div class="progress-label text-color-dark font-weight-semibold text-uppercase text-2">
-												<span>DevOps</span>
-											</div>
-											<div class="progress mb-2">
-												<div class="progress-bar" data-appear-progress-animation="80%" data-appear-animation-delay="900"></div>
+										</div>
+									</div>
+
+									<!-- Tools & Others -->
+									<div class="col-lg-6 mb-4">
+										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
+											<h4 class="text-color-dark mb-3">
+												<i class="fas fa-tools text-color-primary me-2"></i>
+												Tools & Others
+											</h4>
+											<div class="row">
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Git</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Jenkins</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Docker</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+												</div>
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">System Design</span>
+															<span class="text-color-primary">95%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="95%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">CI/CD</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Agile/Scrum</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+												</div>
 											</div>
 										</div>
 									</div>
@@ -441,6 +664,7 @@
 						</div>
 					</div>
 				</section>
+				
 
 				<section id="portfolio" class="section section-no-border bg-color-secondary m-0">
 					<div class="container">
