Animation to Technical Skills

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -486,11 +486,9 @@
 															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="90%"></div>
 														</div>
 													</div>
-												</div>
-												<div class="col-md-6">
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">Node.js</span>
+															<span class="text-color-dark">Spring Data JDBC</span>
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
@@ -499,20 +497,49 @@
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">Express.js</span>
+															<span class="text-color-dark">Hibernate (JPA)</span>
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
 															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="85%"></div>
 														</div>
 													</div>
+												</div>
+												<div class="col-md-6">
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">PostgreSQL</span>
+															<span class="text-color-dark">Node.js</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Express.js</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="600" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">SQL</span>
 															<span class="text-color-primary">90%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="90%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="700" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">NoSQL</span>
+															<span class="text-color-primary">80%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="800" data-appear-progress-animation="80%"></div>
 														</div>
 													</div>
 												</div>
@@ -520,27 +547,27 @@
 										</div>
 									</div>
 
-									<!-- DevOps -->
+									<!-- Cloud & DevOps -->
 									<div class="col-lg-6 mb-4">
 										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
 											<h4 class="text-color-dark mb-3">
 												<i class="fas fa-cloud text-color-primary me-2"></i>
-												DevOps
+												Cloud & DevOps
 											</h4>
 											<div class="row">
 												<div class="col-md-6">
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">Docker</span>
-															<span class="text-color-primary">90%</span>
+															<span class="text-color-dark">AWS</span>
+															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="90%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="85%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">AWS</span>
+															<span class="text-color-dark">GCP</span>
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
@@ -549,18 +576,18 @@
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">Google Cloud</span>
-															<span class="text-color-primary">85%</span>
+															<span class="text-color-dark">CI/CD</span>
+															<span class="text-color-primary">90%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="85%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="90%"></div>
 														</div>
 													</div>
 												</div>
 												<div class="col-md-6">
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">CI/CD</span>
+															<span class="text-color-dark">Docker</span>
 															<span class="text-color-primary">90%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
@@ -601,25 +628,25 @@
 												<div class="col-md-6">
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Cursor AI</span>
+															<span class="text-color-primary">90%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">IntelliJ IDEA</span>
 															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="95%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">VS Code</span>
-															<span class="text-color-primary">90%</span>
-														</div>
-														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="90%"></div>
-														</div>
-													</div>
-													<div class="skill-item mb-3">
-														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">GitHub</span>
 															<span class="text-color-primary">90%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
@@ -639,7 +666,7 @@
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">Metabase</span>
+															<span class="text-color-dark">Tableau</span>
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
@@ -648,11 +675,61 @@
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">Tableau</span>
+															<span class="text-color-dark">Google Analytics</span>
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
 															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="85%"></div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<!-- AI & Additional Tools -->
+									<div class="col-lg-12 mb-4">
+										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
+											<h4 class="text-color-dark mb-3">
+												<i class="fas fa-robot text-color-primary me-2"></i>
+												AI & Additional Tools
+											</h4>
+											<div class="row">
+												<div class="col-12">
+													<div class="d-flex flex-wrap gap-3">
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
+															<i class="fas fa-brain me-2"></i>
+															OpenFeign
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
+															<i class="fas fa-link me-2"></i>
+															LangChain
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
+															<i class="fas fa-robot me-2"></i>
+															GPT-3.5 Turbo
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-12 mb-4">
+										<div class="custom-box-details bg-color-light custom-box-shadow-1 p-4">
+											<h4 class="text-color-dark mb-3">
+												<i class="fas fa-cloud text-color-primary me-2"></i>
+												Cloud Platforms
+											</h4>
+											<div class="row">
+												<div class="col-12">
+													<div class="d-flex flex-wrap gap-3">
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
+															<i class="fab fa-aws me-2"></i>
+															AWS (Amplify, RDS, App Runner)
+														</div>
+														<div class="badge bg-color-primary text-color-light px-4 py-2 rounded-pill">
+															<i class="fab fa-google me-2"></i>
+															Google Cloud (Cloud Run, Cloud Storage)
 														</div>
 													</div>
 												</div>
