Update Animation to Technical Skills

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -401,10 +401,10 @@
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">JavaScript</span>
-															<span class="text-color-primary">90%</span>
+															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="90%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
@@ -416,15 +416,24 @@
 															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="200" data-appear-progress-animation="90%"></div>
 														</div>
 													</div>
-												</div>
-												<div class="col-md-6">
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">HTML/CSS</span>
+															<span class="text-color-dark">HTML</span>
 															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
 															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="95%"></div>
+														</div>
+													</div>
+												</div>
+												<div class="col-md-6">
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">CSS</span>
+															<span class="text-color-primary">95%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
@@ -433,7 +442,7 @@
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="85%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="85%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
@@ -442,7 +451,16 @@
 															<span class="text-color-primary">90%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="90%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="600" data-appear-progress-animation="90%"></div>
+														</div>
+													</div>
+													<div class="skill-item mb-3">
+														<div class="d-flex justify-content-between mb-1">
+															<span class="text-color-dark">Ant Design</span>
+															<span class="text-color-primary">85%</span>
+														</div>
+														<div class="progress" style="height: 8px;">
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="700" data-appear-progress-animation="85%"></div>
 														</div>
 													</div>
 												</div>
@@ -471,10 +489,10 @@
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">Python</span>
-															<span class="text-color-primary">90%</span>
+															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="90%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="100" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
@@ -488,20 +506,11 @@
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">Spring Data JDBC</span>
-															<span class="text-color-primary">85%</span>
-														</div>
-														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="85%"></div>
-														</div>
-													</div>
-													<div class="skill-item mb-3">
-														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">Hibernate (JPA)</span>
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="85%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="85%"></div>
 														</div>
 													</div>
 												</div>
@@ -512,7 +521,7 @@
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="85%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="85%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
@@ -521,25 +530,25 @@
 															<span class="text-color-primary">85%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="600" data-appear-progress-animation="85%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="500" data-appear-progress-animation="85%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">SQL</span>
-															<span class="text-color-primary">90%</span>
+															<span class="text-color-dark">SQL (PostgreSQL, MySQL)</span>
+															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="700" data-appear-progress-animation="90%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="600" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
-															<span class="text-color-dark">NoSQL</span>
+															<span class="text-color-dark">NoSQL (MongoDB)</span>
 															<span class="text-color-primary">80%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="800" data-appear-progress-animation="80%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="700" data-appear-progress-animation="80%"></div>
 														</div>
 													</div>
 												</div>
@@ -629,10 +638,10 @@
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">Cursor AI</span>
-															<span class="text-color-primary">90%</span>
+															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="90%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="0" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
@@ -658,19 +667,19 @@
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">Postman</span>
-															<span class="text-color-primary">85%</span>
+															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="85%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="300" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
 														<div class="d-flex justify-content-between mb-1">
 															<span class="text-color-dark">Tableau</span>
-															<span class="text-color-primary">85%</span>
+															<span class="text-color-primary">95%</span>
 														</div>
 														<div class="progress" style="height: 8px;">
-															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="85%"></div>
+															<div class="progress-bar bg-color-primary appear-animation" data-appear-animation="progressBar" data-appear-animation-delay="400" data-appear-progress-animation="95%"></div>
 														</div>
 													</div>
 													<div class="skill-item mb-3">
