Update About Me

--- a/demo-resume-blue.html
+++ b/demo-resume-blue.html
@@ -202,7 +202,13 @@
 							<div class="row">
 								<div class="col-lg-8">
 									<h2 class="text-color-dark font-weight-extra-bold text-uppercase">About Me</h2>
-									<p>Data expert with 7 years of industry experience in building big data analytics pipelines and leading high-impact, consumer facing projects. Actively seeking a full-stack software engineering role to apply deep expertise in web development, machine learning, and data processing. Solid foundation in computer science and data structures, with strong proficiency in Java, JavaScript, React, Python, SQL, and HTML/CSS. Fast learner with hands-on experience in cloud platforms (GCP, AWS) and emerging AI tools like Cursor AI. Passionate about building scalable applications from the ground up.</p>
+									<p>
+										Data expert with 7 years of industry experience in building big data analytics pipelines and leading high-impact, consumer facing projects. 
+										<span style="font-weight: bold; color: #222;">
+											Actively seeking a full-stack software engineering role to apply deep expertise in web development, machine learning, and data processing. Solid foundation in computer science and data structures, with strong proficiency in Java, JavaScript, React, Python, SQL, and HTML/CSS.
+										</span>
+										Fast learner with hands-on experience in cloud platforms (GCP, AWS) and emerging AI tools like Cursor AI. Passionate about building scalable applications from the ground up.
+									</p>
 
 									<div class="about-me-more" id="aboutMeMore">
 										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam tincidunt nulla tortor, a imperdiet enim tristique nec. Nulla lobortis leo eget metus dapibus sodales. Sed placerat vitae dui vitae vehicula. Quisque in tincidunt ligula, nec dignissim arcu. Praesent aliquam velit vel libero dictum, non sollicitudin lectus mollis. Morbi sollicitudin auctor gravida. Vivamus vitae dui non lorem euismod pretium. Morbi congue sem sed ex iaculis, nec mattis felis pretium. Nullam molestie libero id odio blandit sodales. Suspendisse non mauris et felis molestie placerat aliquet a risus. Aliquam ac leo tempus, hendrerit eros mollis, gravida est.</p>
